# google-cloud-c

./: CMakeLists.txt  Dockerfile  Dockerfile.debian  README.md  vcpkg.json
.github/workflows/: linux-Windows-macOS.yml
cmake/: CTestConfig.cmake  Config.cmake.in  MultiCPackConfig.cmake  README.txt  Welcome.txt  config.h.in
common/: CMakeLists.txt  google_cloud_c_types_common.c  google_cloud_c_types_common.h  types_common.c  types_common.h
google-cloud-c/: CMakeLists.txt  compute.h
google-cloud-c/compute/: cloud_auth.c  cloud_auth.h  compute_common.h  firewall.h  instance.h  network.h  zones.c  zones.h
google_cloud_c/: CMakeLists.txt  compute.c  compute.h
google_cloud_c/bucket_notification/: CMakeLists.txt  bucket_notification.c  bucket_notification.h
google_cloud_c/client/: CMakeLists.txt  cloud_auth.c  cloud_auth.h
google_cloud_c/cloud_common/: CMakeLists.txt  cloud_common.c  cloud_common.h
google_cloud_c/common/: CMakeLists.txt  google_cloud_c_json_common.c  google_cloud_c_json_common.h  google_cloud_c_types_common.c  google_cloud_c_types_common.h
google_cloud_c/compute/: CMakeLists.txt  cloud_auth.c  cloud_auth.h  compute_common.c  compute_common.h  firewall.c  firewall.h  instance.c  instance.h  network.c  network.h  zones.c  zones.h
google_cloud_c/multi/: CMakeLists.txt  compute.c  compute.h
google_cloud_c/operation/: CMakeLists.txt  operation.c  operation.h
google_cloud_c/project/: CMakeLists.txt  project.c  project.h
google_cloud_c/pubsub/: CMakeLists.txt  policy.c  policy.h  pubsub.c  pubsub.h  subscription.c  subscription.h  topic.c  topic.h
google_cloud_c/storage/: CMakeLists.txt  notification_configs.c  notification_configs.h  service_account.c  service_account.h
google_cloud_c/topic/: CMakeLists.txt  topic.c  topic.h
google_cloud_c/userinfo/: CMakeLists.txt  userinfo.c  userinfo.h
google_cloud_c_emit_tests/: CMakeLists.txt  configure.h.in  test.c  test_policy_to_json.h
google_cloud_c_parse_emit_tests/: CMakeLists.txt  instance_mocks.c  instance_mocks.h  policy_mocks.c  policy_mocks.h  subscription_mocks.c  subscription_mocks.h  test.c  test_instance_from_json.h  test_instance_to_json.h  test_parse_emit_policy.h  test_policy_from_json.h  test_policy_to_json.h  test_subscription_from_json.h  test_subscription_to_json.h
google_cloud_c_tests/: CMakeLists.txt  configure.h.in  persist_auth.c  persist_auth.h  test.c  test_instance.h
